# bevy-basic-2d-template

./: Cargo.toml
src/: main.rs
src/game/: mod.rs  systems.rs
src/main_menu/: systems.rs
