[package]
name = "bevy-basic-2d-starter"
version = "0.1.0"
edition = "2021"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = "z"
codegen-units = 1

[dependencies]
bevy = { version = "0.12.1", features = ["file_watcher"] }
bevy_prototype_lyon = "0.10.0"
getrandom = { version = "0.2.7", features = ["js"] }
bevy-inspector-egui = "0.18.0"
bevy_common_assets = { version = "0.7.0", features = ["json"] }
bevy_turborand = "0.7.0"
bevy_egui = "0.24.0"
bevy_ecs_tilemap = "0.11.1"
bevy_asset_loader = { version = "0.19.1", features = ["2d"] }
derive_more = "0.99.17"
serde = "1.0.195"
redox_syscall = "0.4.1"
